# thesis_hs

./: .gitignore  .pre-commit-config.yaml  README.md  alias.py  estimator.py  evaluator.py  plan.py  pyproject.toml  utils.py
balancer/: __init__.py  alweiss.py  base.py  bwd.py  complete_randomization.py  dm.py  efron_biased_coin.py  finite_alweiss.py  finite_efron.py  gsw.py  knn.py  model_coin.py  multi_bwd.py  multi_dm.py  quickblock.py  simple_randomization.py  smith.py
dgp/: __init__.py  base.py  cubic.py  linear.py  linear_drift.py  linear_season.py  quadratic.py  quickblock.py  sinusoidal.py
notebooks/: run-inference-simulation.ipynb  run-multitreatment-simulation.ipynb  run-q-simulation.ipynb  run-simulation.ipynb  run-start.sh  run-time-simulation.ipynb
results/tables/: inference_summary.csv  inference_summary.md  inference_summary_all_dgps.csv
