[project]
name = "thesis"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/thesis"]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "ty>=0.0.1a6",
    "pytest>=8.0",
    "pre-commit>=3.0",
    "jupyter>=1.0",
    "ipykernel>=6.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E501", "E741", "F841"]
"tests/*" = ["ARG"]

[tool.ruff.lint.isort]
known-first-party = ["thesis"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
python-version = "3.13"

[tool.ty.src]
exclude = ["notebooks", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
