[project]
name = "thesis"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "statsmodels>=0.14.0",
    "tabulate>=0.10.0",
    "tqdm>=4.67.3",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src/thesis"]
[dependency-groups]
dev = [
    "ruff>=0.8",
    "ty>=0.0.1a6",
    "pytest>=8.0",
    "pre-commit>=3.0",
    "jupyter>=1.0",
    "ipykernel>=6.0",
]
[tool.ruff]
line-length = 88
target-version = "py313"
[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
]
ignore = [
    "E501", # line too long (handled by formatter)
]
[tool.ruff.lint.per-file-ignores]
# Notebooks use star imports from alias.py — this is intentional
"*.ipynb"          = ["E501", "E741", "F841", "F403", "F405"]
"tests/*"          = ["ARG"]
# Drew's original files — not our code to fix
"balancer/*"       = ["ALL"]
"dgp/*"            = ["ALL"]
"estimator.py"     = ["ALL"]
"plan.py"          = ["ALL"]
"utils.py"         = ["ALL"]
"alias.py"         = ["ALL"]
[tool.ruff.lint.isort]
known-first-party = ["thesis"]
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
exclude = [
    "balancer",
    "dgp",
    "estimator.py",
    "plan.py",
    "utils.py",
    "alias.py",
]
[tool.ty.environment]
python-version = "3.13"
[tool.ty.src]
# Only type-check our own code, not Drew's original files
exclude = [
    "notebooks",
    "tests",
    "balancer",
    "dgp",
    "estimator.py",
    "plan.py",
    "utils.py",
    "alias.py",
]
[tool.pytest.ini_options]
testpaths = ["tests"]
